Add Squad listing backend endpoint